# huttripper-shared

./: Cargo.toml  README.md
src/: helpers.rs  lib.rs  model.rs
src/helpers/: es_helper.rs  s3_helper.rs  sqs_helper.rs
src/model/: avi.rs  geo.rs  hut.rs  object.rs  search.rs  tripreport.rs
